--- a/host/package.json
+++ b/host/package.json
@@ -11,6 +11,7 @@
     "serve": "npm run build && vite preview --port 5500 --strictPort"
   },
   "dependencies": {
+    "jotai": "^2.12.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.4.0"
