--- a/host/package.json
+++ b/host/package.json
@@ -14,7 +14,9 @@
     "jotai": "^2.12.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router": "^7.4.0"
+    "react-hook-form": "^7.56.4",
+    "react-router": "^7.4.0",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
