--- a/remote/package.json
+++ b/remote/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "jotai": "^2.12.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-hook-form": "^7.56.4",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
