--- a/remote/package.json
+++ b/remote/package.json
@@ -15,6 +15,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.4",
+    "react-router": "^7.6.1",
     "zustand": "^5.0.5"
   },
   "devDependencies": {
