--- a/host/package.json
+++ b/host/package.json
@@ -11,6 +11,9 @@
     "serve": "npm run build && vite preview --port 5500 --strictPort"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^7.1.0",
     "jotai": "^2.12.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
